--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
   <package id="WpfScreenHelper" version="1.0.0" targetFramework="net472" />
 </packages>
