--- a/DesktopClock/DesktopClock.csproj
+++ b/DesktopClock/DesktopClock.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-	<TargetFramework>net5.0-windows</TargetFramework>
+	<TargetFramework>net5.0-windows10.0.17763.0</TargetFramework>
 	<UseWPF>true</UseWPF>
     <AssemblyName>DesktopClock</AssemblyName>
     <RootNamespace>DesktopClock</RootNamespace>
