--- a/DesktopClock/DesktopClock.csproj
+++ b/DesktopClock/DesktopClock.csproj
@@ -26,6 +26,7 @@
 		  <Version>1.2.0</Version>
 	  </PackageReference>
     <PackageReference Include="Prism.DryIoc" Version="8.0.0.1909" />
+    <PackageReference Include="WpfScreenHelper" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="MyConfig.Designer.cs">
