--- a/DesktopClock/MyConfig.settings
+++ b/DesktopClock/MyConfig.settings
@@ -2,10 +2,10 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DesktopClock" GeneratedClassName="MyConfig">
   <Profiles />
   <Settings>
-    <Setting Name="LastTop" Type="System.String" Scope="User">
+    <Setting Name="LastTop" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="LastLeft" Type="System.String" Scope="User">
+    <Setting Name="LastLeft" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
